# ecom-product-assistant

./: .gitignore  pyproject.toml  requirements.txt  scrapper_ui.py
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py  data_scrapper_archive.py
prod_assistant/exception/: custom_exception.py
prod_assistant/logger/: __init__.py  custom_logger.py
prod_assistant/utils/: config_loader.py  model_loader.py
templates/: index.html
