[project]
name = "ecom-product-assistant"
version = "0.1.0"
description = "ecommerce product assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.13.5",
    "ddgs==9.6.0",
    "fastapi==0.116.1",
    "html5lib==1.1",
    "huggingface-hub>=0.36.2",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langchain-astradb==0.6.1",
    "langchain-core==0.3.75",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters==0.1.10",
    "langchain-openai==0.3.32",
    "langgraph==0.6.7",
    "lxml==6.0.1",
    "mcp==1.14.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "ragas==0.3.4",
    "selenium==4.35.0",
    "sentence-transformers>=5.2.2",
    "streamlit==1.49.1",
    "structlog==25.4.0",
    "transformers>=4.57.6",
    "undetected-chromedriver==3.5.5",
    "uvicorn==0.35.0",
]
